--- a/index.html
+++ b/index.html
@@ -1,45 +1,30 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
-    <title>HTML Album Cover</title>
-    <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body>
-    <div class="wrapper">
-      <div id="front" class="album">
-        <div id="title-box">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Test Page</title>
+</head>
+<body>
 
-          <!-- Level 4 'PHARRELL WILLIAMS' Header -->
+    <!-- Title Box Section -->
+    <section id="title-box">
+        <h4>PHARRELL WILLIAMS</h4>
+        <h2>HAPPY</h2>
+        <h4>FROM DESPICABLE ME 2</h4>
+    </section>
 
-          <!-- Level 2 'HAPPY' Header -->
+    <!-- Back Section -->
+    <section id="back">
+        <h3>FROM DESPICABLE ME 2</h3>
+        <h1>HAPPY</h1>
+        <h3>WRITTEN BY</h3>
+        <p>PUBLISHED BY</p>
+        <span>PHARRELLWILLIAMS.COM</span>
+        <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt="Columbia Records Logo">
+        <span>COLUMBIARECORDS.COM</span>
+        <img src="https://s3.amazonaws.com/learn-verified/sony-logo.png" alt="Sony Records Logo">
+    </section>
 
-          <!-- Level 4 '| FROM DESPICABLE ME...' Header -->
-
-        </div>
-      </div>
-
-      <div id="back" class="album">
-
-        <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
-
-        <!-- Level 1 'HAPPY' Header -->
-
-        <!-- Level 3 'WRITTEN BY...' Header -->
-
-        <!-- pararaph text 'PUBLISHED BY...' -->
-
-        <!-- span text 'PHARRELLWILLIAMS.COM' -->
-
-        <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
-
-        <!-- span text 'COLUMBIARECORDS.COM' -->
-
-        <br>
-
-        <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
-
-      </div>
-    </div>
-  </body>
+</body>
 </html>
